--- a/SCOP_AppWeb/Views/Devoluciones/Index.cshtml
+++ b/SCOP_AppWeb/Views/Devoluciones/Index.cshtml
@@ -109,6 +109,9 @@
                         @Html.DisplayFor(modelItem => item.IdOrdenProduccion)
                     </td>
                     <td>
+                        @Html.DisplayFor(modelItem => item.IdDevolucion)
+                    </td>
+                    <td>
                         @Html.DisplayFor(modelItem => item.FechaCreacion)
                     </td>
                     <td>
