--- a/SCOP_AppWeb/Views/Devoluciones/Delete.cshtml
+++ b/SCOP_AppWeb/Views/Devoluciones/Delete.cshtml
@@ -1,15 +1,13 @@
 ﻿@model SCOP_AppWeb.Models.Devoluciones
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Cancelar Devolución";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Estás seguro que deseas cancelar la devolución?</h3>
 <div>
-    <h4>Devoluciones</h4>
+    <h4>Devolución</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -17,13 +15,7 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IdOrdenProduccion)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdUsuario)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdUsuario)
-        </dd>
+        </dd>            
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaCreacion)
         </dt>
@@ -35,18 +27,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ImporteDevolucion)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EstadoActivo)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EstadoActivo)
-        </dd>
+        </dd>       
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdDevolucion" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Cancelar" class="btn btn-danger" /> |
+        <a asp-action="Index" class="btn btn-primary">Volver a lista</a>
     </form>
 </div>
