--- a/SCOP_AppWeb/Views/Home/Index.cshtml
+++ b/SCOP_AppWeb/Views/Home/Index.cshtml
@@ -1,8 +1,56 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "CostOptiFine Solutions";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"]</title> 
+</head>
+
+<body>
+
+
+    <div class="container mt-5">
+        <div class="text-center">
+            <h1 class="display-4">¡Optimiza tus Costos con CostOptiFine!</h1>
+            <p class="lead">Automatización y Cálculo de Órdenes de Producción</p>
+        </div>
+
+        <div class="row mt-5">
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Automatización Eficiente</h5>
+                        <p class="card-text">Simplifica tus procesos con nuestra aplicación inteligente que automatiza y calcula costos de producción de manera rápida y precisa.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Gestión de Usuarios Segura</h5>
+                        <p class="card-text">Administra roles de usuario de manera efectiva. Desde administradores hasta operadores, aseguramos la seguridad de tus datos empresariales.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Optimiza tus Procesos</h5>
+                        <p class="card-text">Impulsa la eficiencia con herramientas que ofrecen una optimización. Mejora tus procesos y maximiza tu rendimiento para alcanzar el éxito empresarial.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+   
+
+</body>
+</html>
