--- a/SCOP_AppWeb/Views/Devoluciones/Delete.cshtml
+++ b/SCOP_AppWeb/Views/Devoluciones/Delete.cshtml
@@ -32,7 +32,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdDevolucion" />
-        <input type="submit" value="Cancelar" class="btn btn-danger" /> |
-        <a asp-action="Index" class="btn btn-primary">Volver a lista</a>
+        <input type="submit" value="Cancelar" class="btn btn-danger btn-effect" /> |
+        <a asp-action="Index" class="btn btn-primary btn-effect">Volver a lista</a>
     </form>
 </div>
