--- a/SCOP_AppWeb/Views/Home/Index.cshtml
+++ b/SCOP_AppWeb/Views/Home/Index.cshtml
@@ -21,16 +21,16 @@
 
         <div class="row mt-5">
             <div class="col-md-4">
-                <div class="card">
+                <div class="card shadow">
                     <div class="card-body">
                         <h5 class="card-title">Automatización Eficiente</h5>
-                        <p class="card-text">Simplifica tus procesos con nuestra aplicación inteligente que automatiza y calcula costos de producción de manera rápida y precisa.</p>
+                        <p class="card-text">Simplifica tus procesos con nuestra aplicación que automatiza y calcula costos de producción de manera rápida y precisa.                   </p>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-4">
-                <div class="card">
+                <div class="card shadow">
                     <div class="card-body">
                         <h5 class="card-title">Gestión de Usuarios Segura</h5>
                         <p class="card-text">Administra roles de usuario de manera efectiva. Desde administradores hasta operadores, aseguramos la seguridad de tus datos empresariales.</p>
@@ -39,7 +39,7 @@
             </div>
 
             <div class="col-md-4">
-                <div class="card">
+                <div class="card shadow">
                     <div class="card-body">
                         <h5 class="card-title">Optimiza tus Procesos</h5>
                         <p class="card-text">Impulsa la eficiencia con herramientas que ofrecen una optimización. Mejora tus procesos y maximiza tu rendimiento para alcanzar el éxito empresarial.</p>
@@ -48,8 +48,6 @@
             </div>
         </div>
     </div>
-
-
    
 
 </body>
