--- a/SCOP_AppWeb/Views/Devoluciones/Create.cshtml
+++ b/SCOP_AppWeb/Views/Devoluciones/Create.cshtml
@@ -30,13 +30,13 @@
                 </div>
             }
             <div class="form-group">
-                <input type="submit" value="Enviar" class="btn btn-success mt-2" />
+                <input type="submit" value="Enviar" class="btn btn-success mt-2 btn-effect" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index" class="btn btn-primary mt-2">Volver a la lista</a>
+    <a asp-action="Index" class="btn btn-primary mt-2 btn-effect">Volver a la lista</a>
 </div>
 
