--- a/SCOP_AppWeb/Views/Devoluciones/Edit.cshtml
+++ b/SCOP_AppWeb/Views/Devoluciones/Edit.cshtml
@@ -45,13 +45,13 @@
                 </label>
             </div>
             <div class="form-group">
-                <input type="submit" value="Guardar cambios" class="btn btn-success mt-2" />
+                <input type="submit" value="Guardar cambios" class="btn btn-success mt-2 btn-effect" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index" class="btn btn-primary mt-2">Volver a la lista</a>
+    <a asp-action="Index" class="btn btn-primary mt-2 btn-effect">Volver a la lista</a>
 </div>
 
