--- a/SCOP_AppWeb/Views/Devoluciones/Index.cshtml
+++ b/SCOP_AppWeb/Views/Devoluciones/Index.cshtml
@@ -10,19 +10,19 @@
 
 <p>
     <div class="d-inline-block mb-2">
-        <a asp-action="Create" class="btn btn-success">Solicitar devolución</a>
-        <a asp-action="Buscar" class="btn btn-primary">
+        <a asp-action="Create" class="btn btn-success btn-effect">Solicitar devolución</a>
+        <a asp-action="Buscar" class="btn btn-primary btn-effect">
             Buscar devoluciones
         </a>      
 
     </div>
     @if (ViewBag.MostrarActivos)
     {
-        <a asp-action="FiltrarDevoluciones" asp-route-mostrarActivos="false" class="btn btn-secondary ml-2">Mostrar canceladas</a>
+        <a asp-action="FiltrarDevoluciones" asp-route-mostrarActivos="false" class="btn btn-secondary ml-2 btn-effect">Mostrar canceladas</a>
     }
     else
     {
-        <a asp-action="FiltrarDevoluciones" asp-route-mostrarActivos="true" class="btn btn-secondary ml-2">Ocultar canceladas</a>
+        <a asp-action="FiltrarDevoluciones" asp-route-mostrarActivos="true" class="btn btn-secondary ml-2 btn-effect">Ocultar canceladas</a>
     }
     
      @if (ViewBag.MostrarActivos)
@@ -32,7 +32,7 @@
             <form asp-action="Index" asp-controller="Devoluciones" method="get">
                 <input type="hidden" name="ordenarPorIdOrdenProduccion" value="true" />
                 <p>
-                    <button type="submit" class="btn btn-dark ">Ordenar por ID de Orden de Producción</button>
+                    <button type="submit" class="btn btn-dark btn-effect">Ordenar por ID de Orden de Producción</button>
                 </p>
             </form>
         }
@@ -41,7 +41,7 @@
             <form asp-action="Index" asp-controller="Devoluciones" method="get">
                 <input type="hidden" name="ordenarPorIdOrdenProduccion" value="false" />
                 <p>
-                    <button type="submit" class="btn btn-dark ">Ordenar por ID de Devolución</button>
+                    <button type="submit" class="btn btn-dark btn-effect">Ordenar por ID de Devolución</button>
                 </p>
             </form>
         }
@@ -95,8 +95,8 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <div>
-                                <a asp-action="Edit" asp-route-id="@item.IdDevolucion" class="btn btn-success">Editar</a> |                    
-                                <a asp-action="Delete" asp-route-id="@item.IdDevolucion" class="btn btn-danger">Cancelar</a>
+                                <a asp-action="Edit" asp-route-id="@item.IdDevolucion" class="btn btn-success btn-effect">Editar</a> |
+                                <a asp-action="Delete" asp-route-id="@item.IdDevolucion" class="btn btn-danger btn-effect">Cancelar</a>
                             </div>
                         }
                     </td>
