--- a/SCOP_AppWeb/wwwroot/css/site.css
+++ b/SCOP_AppWeb/wwwroot/css/site.css
@@ -94,3 +94,11 @@ body {
     color: rgba(153, 88, 42);
     border-radius: 10px;
 }
+
+.btn-effect:hover {   
+    border-radius: 10px;
+    transition: all 0.3s ease-in-out;
+    transform: scale(1.05);
+}
+
+
