--- a/SCOP_AppWeb/Views/OrdenProduccion/Edit.cshtml
+++ b/SCOP_AppWeb/Views/OrdenProduccion/Edit.cshtml
@@ -12,6 +12,13 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
+            @if (TempData["MensajeError"] != null)
+            {
+                <div class="alert alert-warning" role="alert">
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="close"></button>
+                    <strong>@TempData["MensajeError"]</strong>
+                </div>
+            }
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="IdOrdenProduccion" />
             <div class="form-group">
