--- a/SCOP_AppWeb/Views/OrdenProduccion/Index.cshtml
+++ b/SCOP_AppWeb/Views/OrdenProduccion/Index.cshtml
@@ -1,39 +1,33 @@
 ﻿@model IEnumerable<SCOP_AppWeb.Models.OrdenProduccion>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Órdenes de producción";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Órdenes de producción</h1>
 
 <p>
-    <a asp-action="RegistrarOrdenProduccion">Create New</a>
+    <a asp-action="RegistrarOrdenProduccion" class="btn btn-success">Agregar Orden</a>
 </p>
 <table class="table">
     <thead>
-        <tr>     
+        <tr>
             <th>
-                @Html.DisplayNameFor(model => model.IdOrdenProduccion)
+                ID
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IdUsuario)
+                Fecha recepción
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FechaRecepcion)
+                Estado producción
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.EstadoProduccion)
+                Cantidad de productos
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CantidadProductos)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Descripcion)
-            </th>           
-            <th>
-                @Html.DisplayNameFor(model => model.EstadoActivo)
-            </th>
+                Descripción
+            </th>            
             <th></th>
         </tr>
     </thead>
@@ -42,9 +36,6 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.IdOrdenProduccion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdUsuario)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FechaRecepcion)
@@ -57,16 +48,14 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Descripcion)
-            </td>
+            </td>            
             <td>
-                @Html.DisplayFor(modelItem => item.EstadoActivo)
+                <a asp-action="Edit" asp-route-id="@item.IdOrdenProduccion" class="btn btn-primary">Editar</a> |
+                <a asp-action="Finalizar" asp-route-id="@item.IdOrdenProduccion" class="btn btn-warning">Finalizar</a> |
+                <a asp-action="Produccion" asp-route-id="@item.IdOrdenProduccion" class="btn btn-warning">Produccion</a> |
+                <a asp-action="Delete" asp-route-id="@item.IdOrdenProduccion" class="btn btn-danger">Cancelar</a> 
+                
             </td>
-            <td>
-
-                <a asp-action="Edit" asp-route-id="@item.IdOrdenProduccion" class="btn btn-success">Editar</a> |
-                <a asp-action="Delete" asp-route-id="@item.IdOrdenProduccion" class="btn btn-danger">Cancelar</a> |
-                <a asp-action="Finalizar" asp-route-id="@item.IdOrdenProduccion" class="btn btn-danger">Finalizar</a>
-
         </tr>
 }
     </tbody>
