--- a/SCOP_AppWeb/Views/OrdenProduccion/Produccion.cshtml
+++ b/SCOP_AppWeb/Views/OrdenProduccion/Produccion.cshtml
@@ -1,15 +1,15 @@
 ﻿@model SCOP_AppWeb.Models.OrdenProduccion
 
 @{
-    ViewData["Title"] = "Cancelar orden de producción";
+    ViewData["Title"] = "Produccion";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Cancelar orden de producción</h1>
+<h1>Produccion</h1>
 
-<h3>Está seguro de que desea cancelar la orden de producción?</h3>
+<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Orden producción</h4>
+    <h4>OrdenProduccion</h4>
     <hr />
     @if (TempData["MensajeError"] != null)
     {
@@ -20,40 +20,46 @@
     }
     <dl class="row">
         <dt class = "col-sm-2">
-            ID
+            @Html.DisplayNameFor(model => model.IdUsuario)
         </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.IdOrdenProduccion)
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IdUsuario)
         </dd>
         <dt class = "col-sm-2">
-            Fecha de recepción
+            @Html.DisplayNameFor(model => model.FechaRecepcion)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FechaRecepcion)
         </dd>
         <dt class = "col-sm-2">
-            Estado de producción
+            @Html.DisplayNameFor(model => model.EstadoProduccion)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.EstadoProduccion)
         </dd>
         <dt class = "col-sm-2">
-            Cantidad de productos
+            @Html.DisplayNameFor(model => model.CantidadProductos)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.CantidadProductos)
         </dd>
         <dt class = "col-sm-2">
-            Descripción
+            @Html.DisplayNameFor(model => model.Descripcion)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Descripcion)
-        </dd>        
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.EstadoActivo)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.EstadoActivo)
+        </dd>
     </dl>
     
-    <form asp-action="Delete">
+    <form asp-action="Produccion">
         <input type="hidden" asp-for="IdOrdenProduccion" />
-        <input type="submit" value="Cancelar orden" class="btn btn-danger" /> |
-        <a asp-action="Index" class="btn btn-secondary">Regresar</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to List</a>
     </form>
 </div>
