--- a/SCOP_AppWeb/Views/Shared/_Layout.cshtml
+++ b/SCOP_AppWeb/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Usuarios" asp-action="Index">Usuarios</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Auditoria" asp-action="Index">Auditoria</a>
+                            </li>
                         }
                     </ul>
                     <ul class="navbar-nav">
