--- a/SCOP_AppWeb/Views/Usuarios/Index.cshtml
+++ b/SCOP_AppWeb/Views/Usuarios/Index.cshtml
@@ -68,9 +68,8 @@
                 @Html.DisplayFor(modelItem => item.restablecer)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Modificar", "Edit", new {  id=item.idUsuario }) |
+                @Html.ActionLink("Inactivar", "Inactivar", new {  id=item.idUsuario })
             </td>
         </tr>
 }
