--- a/SCOP_AppWeb/Views/Devoluciones/Delete.cshtml
+++ b/SCOP_AppWeb/Views/Devoluciones/Delete.cshtml
@@ -6,6 +6,22 @@
 }
 
 <h3>¿Estás seguro que deseas cancelar la devolución?</h3>
+
+<style>
+    .content {
+        background-color: cadetblue;
+    }
+
+    .color {
+        background-color: #F0FFFF;
+        font-family: 'Lobster', cursive;
+    }
+
+    .letra {
+        color: black;
+    }
+</style>
+<body class=" color letra">
 <div>
     <h4>Devolución</h4>
     <hr />
@@ -36,3 +52,4 @@
         <a asp-action="Index" class="btn btn-primary btn-effect">Volver a lista</a>
     </form>
 </div>
+</body>
