--- a/SCOP_AppWeb/Views/OrdenProduccion/Edit.cshtml
+++ b/SCOP_AppWeb/Views/OrdenProduccion/Edit.cshtml
@@ -9,8 +9,24 @@
 
 <h4>OrdenProduccion</h4>
 <hr />
+
+<style>
+    .content {
+        background-color: cadetblue;
+    }
+
+    .color {
+        background-color: #F0FFFF;
+        font-family: 'Lobster', cursive;
+    }
+
+    .letra {
+        color: black;
+    }
+</style>
+<body class=" color letra">
 <div class="row">
-    <div class="col-md-4">
+        <div class="col-md-4  mx-auto" style="border: 1px solid #ccc; padding: 20px; border-radius: 10px;">
         <form asp-action="Edit">
             @if (TempData["MensajeError"] != null)
             {
@@ -55,14 +71,16 @@
                     <input class="form-check-input" asp-for="EstadoActivo" /> @Html.DisplayNameFor(model => model.EstadoActivo)
                 </label>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
+         
+
+                <div class="form-group mt-2">
+                    <input type="submit" value="Save" class="btn btn-success" />
+                    <a asp-action="Index" class="btn btn-secondary ml-2">Volver a la lista</a>
+                </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
+
+</body>
