--- a/SCOP_AppWeb/Views/Requisiciones/Edit.cshtml
+++ b/SCOP_AppWeb/Views/Requisiciones/Edit.cshtml
@@ -16,8 +16,24 @@
 
 
 <hr />
+
+<style>
+    .content {
+        background-color: cadetblue;
+    }
+
+    .color {
+        background-color: #F0FFFF;
+        font-family: 'Lobster', cursive;
+    }
+
+    .letra {
+        color: black;
+    }
+</style>
+<body class="color">
 <div class="row">
-    <div class="col-md-4">
+        <div class="col-md-4 mx-auto">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="IdRequisicion" />
@@ -74,5 +90,5 @@
     </div>
 </div>
 
-
+</body>
 
