--- a/SCOP_AppWeb/Views/Devoluciones/Create.cshtml
+++ b/SCOP_AppWeb/Views/Devoluciones/Create.cshtml
@@ -9,8 +9,25 @@
 <h4>Solicitar devolución</h4>
 
 <hr />
+
+<style>
+    .content {
+        background-color: cadetblue;
+    }
+
+    .color {
+        background-color: #F0FFFF;
+        font-family: 'Lobster', cursive;
+    }
+
+    .letra {
+        color: black;
+    }
+</style>
+<body class="color">
+    <div class="container">
 <div class="row">
-    <div class="col-md-4">
+            <div class="col-md-4 mx-auto">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -31,12 +48,12 @@
             }
             <div class="form-group">
                 <input type="submit" value="Enviar" class="btn btn-success mt-2 btn-effect" />
+                        <a asp-action="Index" class="btn btn-primary mt-2 btn-effect">Volver a la lista</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index" class="btn btn-primary mt-2 btn-effect">Volver a la lista</a>
-</div>
 
+    </div>
+</body>
