--- a/SCOP_AppWeb/Views/Devoluciones/Index.cshtml
+++ b/SCOP_AppWeb/Views/Devoluciones/Index.cshtml
@@ -5,8 +5,38 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Listado de devoluciones</h1>
+<h1 class="letra">Listado de devoluciones</h1>
 
+<style>
+    body {
+        background-image: url('/img/rayas.jpg');
+        background-position: center center;
+        --background-size: cover; /* Para cubrir todo el fondo */
+        --background-position: center; /* Posición de la imagen */
+        --background-repeat: no-repeat;
+        background-size: 100% 300px;
+        height: 100vh;
+        font-family: 'Lobster', cursive;
+    }
+
+
+    .boton {
+        color: #0a0a0a;
+        background: linear-gradient(#747871, #FFFFFF);
+        border-radius: 5px;
+        margin-bottom: 10px;
+    }
+
+    .fondotabla {
+        background-color: #F0FFFF;
+        font-family: 'Lobster', cursive;
+        border-radius: 5px;
+    }
+
+    .letra{
+        color: white;
+    }
+</style>
 
 <p>
     <div class="d-inline-block mb-2">
@@ -50,7 +80,7 @@
 
 </p>
 
-<table class="table">
+<table class="table fondotabla">
     <thead>
         <tr>
             <th>
@@ -95,8 +125,8 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <div>
-                                <a asp-action="Edit" asp-route-id="@item.IdDevolucion" class="btn btn-success btn-effect">Editar</a> |
-                                <a asp-action="Delete" asp-route-id="@item.IdDevolucion" class="btn btn-danger btn-effect">Cancelar</a>
+                                <a asp-action="Edit" asp-route-id="@item.IdDevolucion" class="btn boton">Editar</a> |
+                                <a asp-action="Delete" asp-route-id="@item.IdDevolucion" class="btn boton">Cancelar</a>
                             </div>
                         }
                     </td>
