--- a/SCOP_AppWeb/Views/OrdenProduccion/Finalizar.cshtml
+++ b/SCOP_AppWeb/Views/OrdenProduccion/Finalizar.cshtml
@@ -7,7 +7,23 @@
 
 <h1>Finalizar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Desea finalizar esta orden?</h3>
+
+<style>
+    .content {
+        background-color: cadetblue;
+    }
+
+    .color {
+        background-color: #F0FFFF;
+        font-family: 'Lobster', cursive;
+    }
+
+    .letra {
+        color: black;
+    }
+</style>
+<body class="color letra">
 <div>
     <h4>OrdenProduccion</h4>
     <hr />
@@ -18,7 +34,7 @@
             <strong>@TempData["MensajeError"]</strong>
         </div>
     }
-    <dl class="row">
+        <dl class="row mx-auto" style="border: 1px solid #ccc; padding: 20px; border-radius: 10px;">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdUsuario)
         </dt>
@@ -56,10 +72,11 @@
             @Html.DisplayFor(model => model.EstadoActivo)
         </dd>
     </dl>
-    
-    <form asp-action="Finalizar">
-        <input type="hidden" asp-for="IdOrdenProduccion" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+
+        <form asp-action="Finalizar">
+            <input type="hidden" asp-for="IdOrdenProduccion" />
+            <input type="submit" value="Finalizar" class="btn btn-danger" /> |
+            <a asp-action="Index" class="btn btn-secondary ml-2">Volver a la lista</a>
+        </form>
 </div>
+</body>
