--- a/SCOP_AppWeb/Views/OrdenProduccion/Produccion.cshtml
+++ b/SCOP_AppWeb/Views/OrdenProduccion/Produccion.cshtml
@@ -7,7 +7,24 @@
 
 <h1>Produccion</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Está seguro que desea pasar a producción esta orden</h3>
+
+<style>
+    .content {
+        background-color: cadetblue;
+    }
+
+    .color {
+        background-color: #F0FFFF;
+        font-family: 'Lobster', cursive;
+    }
+
+    .letra {
+        color: black;
+    }
+</style>
+
+<body class=" color letra">
 <div>
     <h4>OrdenProduccion</h4>
     <hr />
@@ -49,17 +66,14 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Descripcion)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EstadoActivo)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EstadoActivo)
-        </dd>
+      
     </dl>
     
     <form asp-action="Produccion">
         <input type="hidden" asp-for="IdOrdenProduccion" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+       
+            <input type="submit" value="Aceptar" class="btn btn-success" />
+            <a asp-action="Index" class="btn btn-secondary ml-2">Volver a la lista</a>
     </form>
 </div>
+</body>
