--- a/SCOP_AppWeb/Views/Requisiciones/Delete.cshtml
+++ b/SCOP_AppWeb/Views/Requisiciones/Delete.cshtml
@@ -5,6 +5,21 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<style>
+    .content {
+        background-color: cadetblue;
+    }
+
+    .color {
+        background-color: #F0FFFF;
+        font-family: 'Lobster', cursive;
+    }
+
+    .letra {
+        color: black;
+    }
+</style>
+<body class="color">
 
  @if (User.Identity.IsAuthenticated)
      {
@@ -75,3 +90,4 @@
     </div>
 
 </div>
+</body>
