--- a/SCOP_AppWeb/Views/Usuarios/Edit.cshtml
+++ b/SCOP_AppWeb/Views/Usuarios/Edit.cshtml
@@ -9,8 +9,29 @@
 
 <h4>Usuarios</h4>
 <hr />
+
+<style>
+    .content {
+        background-color: cadetblue;
+    }
+
+    .color {
+        background-color: #F0FFFF;
+        font-family: 'Lobster', cursive;
+    }
+
+    .letra {
+        color: black;
+    }
+
+    .fondo {
+        background-color: ghostwhite
+    }
+</style>
+
+<body class="color letra">
 <div class="row">
-    <div class="col-md-4">
+        <div class="col-md-4 mx-auto fondo" style=" border: 1px solid #ccc; padding: 20px; border-radius: 10px;">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="idUsuario" />
@@ -51,12 +72,12 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                  <a asp-action="Index" class="btn btn-secondary ml-2">Volver a la lista</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
+
+</body>
