--- a/SCOP_AppWeb/Views/Usuarios/RegistrarUsuario.cshtml
+++ b/SCOP_AppWeb/Views/Usuarios/RegistrarUsuario.cshtml
@@ -4,7 +4,23 @@
     ViewData["Title"] = "RegistrarUsuario";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<h1 class="Titulos">Registrar Usuario</h1>
+<h1 class="letra">Registrar Usuario</h1>
+
+<style>
+    .content {
+        background-color: cadetblue;
+    }
+
+    .color {
+        background-color: #F0FFFF;
+        font-family: 'Lobster', cursive;
+    }
+
+    .letra {
+        color: black;
+    }
+</style>
+<body class="color letra">
 <div class="container">
     <div class="row">
         <div class="col-md-4"></div>
@@ -51,3 +67,4 @@
         <div class="col-md-4"></div>
     </div>
 </div>
+</body>
